[gd_scene load_steps=8 format=2]

[ext_resource path="res://content/weapons/artillery/Artillery.gd" type="Script" id=1]
[ext_resource path="res://content/weapons/laser/dotted.png" type="Texture" id=2]
[ext_resource path="res://content/sounds/Weapons/artillery/Retro Gun SingleShot 17.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/Weapons/Laser/laser.wav" type="AudioStream" id=4]
[ext_resource path="res://content/weapons/artillery/base.png" type="Texture" id=5]
[ext_resource path="res://content/weapons/artillery/cannon.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="Artillery" type="Node2D" groups=["primaryWeapon"]]
z_index = 60
script = ExtResource( 1 )

[node name="ShotPredictionPath" type="Path2D" parent="."]
position = Vector2( 0, -5 )
curve = SubResource( 1 )

[node name="AimLine" type="Line2D" parent="."]
position = Vector2( 0, -24 )
points = PoolVector2Array( 0, -6, 0, -600 )
width = 2.0
default_color = Color( 1, 1, 1, 0.898039 )
texture = ExtResource( 2 )
texture_mode = 1

[node name="Barrel" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 6 )
offset = Vector2( 0, -10 )

[node name="SpawnPoint" type="Position2D" parent="Barrel"]
position = Vector2( 0, -23 )

[node name="Filling" type="Polygon2D" parent="Barrel"]
scale = Vector2( 1, 0.1 )
color = Color( 0.580392, 0.211765, 0.580392, 1 )
polygon = PoolVector2Array( -3, 0, 3, 0, 3, -24, -3, -24 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 5 )

[node name="ChargeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
bus = "Sounds"

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"
